--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
         <span class="item__checkmark"></span>
       </label>
       <label for="checked-3" class="item__text"
-        >1 and 1/2 cups (150g)
-        <span class="bold">graham cracker crumbs</span> (about 10 full sheet
-        graham crackers)</label
+        >1/4 cup (50g) <span class="bold">granulated sugar</span></label
       >
     </div>
 
